WIP(deployment) - change to caddy - wash route working

--- a/dev_deployment/.env.example
+++ b/dev_deployment/.env.example
@@ -1,9 +1,21 @@
-OCI_PASS=somepass
-OCI_USER=someuser
-OCI_REG=someurl
+DOMAIN=somedomain
+# PRIVATE OCI OCI_REGISTRY
+OCI_PASSWORD=somepass
+OCI_USERNAME=someuser
+OCI_REGISTRY=someurl
+# OAUTH2 CLIENT
 CLIENT_ID=someid
 CLIENT_SECRET=somesecret
+# WADM
 HOST_APP=appname
 HOST_APP_VERSION=0.0.1
+# WASMCLOUD
 WASMC_VERSION=wasmcloudversion
 WASMCLOUD_CLUSTER_SEED=someclusterseed
+# TLS AND NETWORK AUTH
+GCE_PROJECT_ID=gcloudprojectid
+GCE_SERVICE_ACCOUNT_FILE_PATH=gcloudserviceaccountfilepathincontainer
+# HTPASSWD NO CURRENTLY USED
+HTPASSWD=somehtpasswds
+# Tailscale Auth Key
+TS_AUTH=somekeys
