--- a/dev_deployment/tracing/grafana-datasources.yaml
+++ b/dev_deployment/tracing/grafana-datasources.yaml
@@ -4,7 +4,7 @@ datasources:
   - name: Tempo
     type: tempo
     access: proxy
-    url: http://tempo:8000
+    url: https://0.0.0.0:9000
     version: 1
     editable: false
     uid: tempo
